crates/etch-core/tests/snapshots/corpus_tests__extensions-block-directives-pagebreak.snap
---
source: crates/etch-core/tests/corpus_tests.rs
assertion_line: 658
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "First section."
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "InlineDirective",
            "directive_id": 1,
            "span": {
              "start": {
                "line": 1,
                "column": 1
              },
              "end": {
                "line": 1,
                "column": 11
              }
            },
            "name": "pagebreak"
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Second section."
          }
        ]
      }
    ]
  },
  "errors": []
}
