crates/etch-core/tests/snapshots/corpus_tests__extensions-block-directives-spoiler.snap
---
source: crates/etch-core/tests/corpus_tests.rs
assertion_line: 668
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "BlockDirective",
        "directive_id": 1,
        "span": {
          "start": {
            "line": 3,
            "column": 1
          },
          "end": {
            "line": 5,
            "column": 3
          }
        },
        "name": "spoiler",
        "label": [
          {
            "type": "Text",
            "value": "Click to reveal"
          }
        ],
        "raw_label": "Click to reveal",
        "raw_body": "The missing compass was tucked inside the flour tin.",
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "The missing compass was tucked inside the flour tin."
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
