crates/etch-core/tests/snapshots/corpus_tests__extensions-block-directives-toc.snap
---
source: crates/etch-core/tests/corpus_tests.rs
assertion_line: 673
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "InlineDirective",
            "directive_id": 1,
            "span": {
              "start": {
                "line": 1,
                "column": 1
              },
              "end": {
                "line": 1,
                "column": 5
              }
            },
            "name": "toc"
          }
        ]
      }
    ]
  },
  "errors": []
}
