crates/etch-core/tests/snapshots/corpus_tests__extensions-block-directives-with-attrs.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "BlockDirective",
        "directive_id": 1,
        "span": {
          "start": {
            "line": 3,
            "column": 1
          },
          "end": {
            "line": 5,
            "column": 3
          }
        },
        "name": "figure",
        "attrs": {
          "pairs": {
            "caption": "A scenic view",
            "width": "80%"
          }
        },
        "raw_body": "![North ridge overlook](photos/north-ridge.jpg)",
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Image",
                "url": "photos/north-ridge.jpg",
                "alt": "North ridge overlook"
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
