crates/etch-core/tests/snapshots/corpus_tests__extensions-block-directives-with-both.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "BlockDirective",
        "directive_id": 1,
        "span": {
          "start": {
            "line": 3,
            "column": 1
          },
          "end": {
            "line": 5,
            "column": 3
          }
        },
        "name": "aside",
        "label": [
          {
            "type": "Text",
            "value": "Author's note"
          }
        ],
        "raw_label": "Author's note",
        "attrs": {
          "classes": [
            "highlighted"
          ]
        },
        "raw_body": "This margin note should appear with highlighted styling.",
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "This margin note should appear with highlighted styling."
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
