crates/etch-core/tests/snapshots/corpus_tests__extensions-block-directives-with-label.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "BlockDirective",
        "name": "spoiler",
        "label": [
          {
            "type": "Text",
            "value": "Click to reveal"
          }
        ],
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "The missing compass was hidden in the bread tin."
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
