crates/etch-core/tests/snapshots/corpus_tests__extensions-comments-adjacent-to-attrs.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Heading",
        "level": 1,
        "content": [
          {
            "type": "Text",
            "value": "Title  {#my-id}"
          }
        ]
      }
    ]
  },
  "errors": []
}
