crates/etch-core/tests/snapshots/corpus_tests__extensions-comments-inline.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Text before  text after."
          }
        ]
      }
    ]
  },
  "errors": []
}
