crates/etch-core/tests/snapshots/corpus_tests__extensions-comments-line.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The first paragraph appears before the comment."
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The second paragraph appears after the comment."
          }
        ]
      }
    ]
  },
  "errors": []
}
