crates/etch-core/tests/snapshots/corpus_tests__extensions-comments-multi-line.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Paragraph before the comment block."
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Paragraph after the comment block."
          }
        ]
      }
    ]
  },
  "errors": []
}
